Fix home page white space to the right

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,2 +1,8 @@
 
 /*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJhcHAuY29tcG9uZW50LmNzcyJ9 */
+.router-outlet {
+  max-width: 100%;
+}
+* {
+  max-width: 100%;
+}
