--- a/src/app/layout/layout/layout.component.css
+++ b/src/app/layout/layout/layout.component.css
@@ -1,2 +1,5 @@
 
 /*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJsYXlvdXQuY29tcG9uZW50LmNzcyJ9 */
+.app-layout {
+  max-width: 100%;
+}
